--- a/.env
+++ b/.env
@@ -1,7 +1,6 @@
-REACT_APP_CANDY_MACHINE_ID=__PLACEHOLDER__
-REACT_APP_SOLANA_NETWORK=devnet
-REACT_APP_SOLANA_RPC_HOST=https://api.devnet.solana.com
-
+REACT_APP_CANDY_MACHINE_ID=HKKpfNR2VWqbNKS3mfJoLMC5mzNGCGzH1gvremsev1o3
+REACT_APP_SOLANA_NETWORK=mainnet-beta
+REACT_APP_SOLANA_RPC_HOST=https://ssc-dao.genesysgo.net/ 
 
 # ADDITIONAL PARAMS TO SET IF USING SPL-TOKEN AS MINTING CURRENCY ONLY :
 # Spl-Token symbol to display next the price
